--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.5.10",
     "react": "16",
     "react-dom": "16",
+    "react-lifecycle-component": "^3.0.0",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
     "reactstrap": "^6.5.0",
